SOLAR COST ESTIMATOR

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- hero section -->
      <div class="main">
         <div class="heading">
-             "Smart Solar. Smarter Spending."
+             "Smart Solar, Smarter Spending!"
         </div>
         <div class="main__container">
             <div class="main__content">
