SOLAR COST ESTIMATOR

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="main_img--container">
-                <img src="images/pic1.svg" alt="pic" id="main__img">
+                <img src="images/image.svg" alt="pic" id="main__img">
             </div>
         </div>
      </div>
